--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -2,10 +2,6 @@
   background-color: var(--hero-bgc);
 }
 
-.title-box {
-  max-width: 218px;
-}
-
 .hero-title {
   text-transform: uppercase;
   text-align: left;
@@ -81,6 +77,16 @@
 }
 
 @media screen and (min-width: 768px) {
+  .hero-title {
+    font-size: 22px;
+    line-height: 1.136;
+  }
+
+  .hero-title-accent {
+    font-size: 34px;
+    line-height: 0.911;
+  }
+
   .hero-text-box {
     display: block;
     max-width: 114px;
