--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -4,22 +4,31 @@
   padding-bottom: 56px;
   padding-left: 50px;
   text-align: center;
-  font-family: DM Sans,sans-serif;
+  font-family: DM Sans, sans-serif;
   font-size: 12px;
   line-height: 1.86;
   font-weight: 500;
   letter-spacing: 0.04em;
 
-  background-image: linear-gradient(to bottom, var(--primary-light-bg-color) 84px, var(--secondary-bg-color) 84px, var(--secondary-bg-color) 85%);
-  
-    
-    @include adaptive-for-tablet {
-      font-size: 14px;
-    }
-    @include adaptive-for-desktop {
-      font-size: 16px;
-      background-image: linear-gradient(to bottom, var(--primary-light-bg-color) 15%, var(--secondary-bg-color) 15%, var(--secondary-bg-color) 85%);
-    }
+  background-image: linear-gradient(
+    to bottom,
+    var(--primary-light-bg-color) 84px,
+    var(--secondary-bg-color) 84px,
+    var(--secondary-bg-color) 85%
+  );
+
+  @include adaptive-for-tablet {
+    font-size: 14px;
+  }
+  @include adaptive-for-desktop {
+    font-size: 16px;
+    background-image: linear-gradient(
+      to bottom,
+      var(--primary-light-bg-color) 15%,
+      var(--secondary-bg-color) 15%,
+      var(--secondary-bg-color) 85%
+    );
+  }
 }
 
 .location-list {
@@ -31,7 +40,6 @@
   margin-right: -15px;
   margin-bottom: 54px;
   margin-left: -15px;
-
 
   @include adaptive-for-tablet {
     flex-direction: row;
@@ -59,7 +67,9 @@
   border-radius: 24px;
 
   @include adaptive-for-tablet {
-    flex-basis: calc((100% - 3*30px) / 3);//3 - number of cards in a row, 20px - gap between cards
+    flex-basis: calc(
+      (100% - 3 * 30px) / 3
+    ); //3 - number of cards in a row, 20px - gap between cards
     margin: 15px;
     padding: 50px 31px;
   }
@@ -71,19 +81,19 @@
 }
 
 .location-list-place {
-    display: inline-block;
-    margin-bottom: 25px;
-    padding: 0 20px;
-    font-size: 12px;
-    line-height: 1.86;
-    font-weight: 500;
-    letter-spacing: 0.04em;
-    color: var(--primary-light-color);
-    text-transform: uppercase;
-    border-radius: 4px;
-    @include adaptive-for-tablet {
-      font-size: 16px;
-    }
+  display: inline-block;
+  margin-bottom: 25px;
+  padding: 0 20px;
+  font-size: 12px;
+  line-height: 1.86;
+  font-weight: 500;
+  letter-spacing: 0.04em;
+  color: var(--primary-light-color);
+  text-transform: uppercase;
+  border-radius: 4px;
+  @include adaptive-for-tablet {
+    font-size: 16px;
+  }
 }
 
 .cafe {
@@ -94,32 +104,32 @@
 }
 
 .location-list-city {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .location-list-content {
-    font-weight: 500;
-    color: var(--secondary-dark-shaded-color);
-
+  font-weight: 500;
+  color: var(--secondary-dark-shaded-color);
 }
 
 .location-work-time-list {
-      margin-bottom: 25px;
-      padding: 0;
-      &::before, &::after {
-        content: "";
-        display: inline-block;
-        border: 1px solid #e1e1e1;
-        width: 100%;
+  margin-bottom: 25px;
+  padding: 0;
+  &::before,
+  &::after {
+    content: '';
+    display: inline-block;
+    border: 1px solid #e1e1e1;
+    width: 100%;
+  }
 }
-  }
 
-  .location-work-day {
-    margin-top: 25px;
-  }
+.location-work-day {
+  margin-top: 25px;
+}
 
-  .location-work-time {
-    color: var(--social-link-bg-basic-color);
+.location-work-time {
+  color: var(--social-link-bg-basic-color);
 }
 
 .location-address-list {
@@ -127,7 +137,6 @@
 }
 
 .location-address-tel {
-
   line-height: 1.5;
   color: var(--secondary-dark-shaded-color);
 
@@ -137,12 +146,12 @@
   }
 }
 
-//Buttons 
+//Buttons
 
 .location-button-list {
   display: flex;
   flex-direction: column;
-  align-items:center;
+  align-items: center;
   justify-content: center;
 }
 
@@ -153,31 +162,31 @@
 }
 
 .location-button {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 0 37px 0;
-      width: 176px;
-      height: 44px;
-      background: var(--primary-light-color);
-      border-radius: 22px;
-      border: none;
-      transition: background 250ms linear;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 37px 0;
+  width: 176px;
+  height: 44px;
+  background: var(--primary-light-color);
+  border-radius: 22px;
+  border: none;
+  transition: background 250ms linear;
 
-      font-weight: 700;
-      font-size: 14px;
-      line-height: 18px;
-      color: var(--accent-color);
-      &-arrow {
-        width: 8px;
-        height: 13px;
-      }
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 18px;
+  color: var(--accent-color);
+  &-arrow {
+    width: 8px;
+    height: 13px;
+  }
 
-      &:hover,
-      &:focus {
-        color: var(--primary-light-color);
-        background: var(--accent-color);
-      }
+  &:hover,
+  &:focus {
+    color: var(--primary-light-color);
+    background: var(--accent-color);
+  }
 }
 
 // End buttons
