--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -2,12 +2,12 @@
   padding-top: 121px;
   padding-bottom: 98px;
 
-  position: relative;
-  background-color: var(--white);
-  z-index: 4;
+  // position: relative;
+  // background-color: var(--white);
+  // z-index: 4;
   @media screen and (min-width: 768px) {
     padding-top: 122px;
-  padding-bottom: 112px;
+    padding-bottom: 112px;
   }
 
   @media screen and (min-width: 1280px) {
@@ -21,6 +21,8 @@
   margin-bottom: 15px;
   font-family: Titan One;
   font-style: normal;
+  // @include font-mobile($fs: 18px, $fw: 400, $lh: 21px);
+
   font-weight: 400;
   font-size: 18px;
   line-height: 21px;
@@ -32,11 +34,13 @@
   color: var(--pink);
 
   @media screen and (min-width: 768px) {
+    // @include font-tablet($fs: 26px, $lh: 30px);
     font-size: 26px;
     line-height: 30px;
   }
 
   @media screen and (min-width: 1280px) {
+    // @include font-desktop($fs: 30px, $lh: 34px);
     font-size: 30px;
     line-height: 34px;
     letter-spacing: 0.04em;
@@ -47,6 +51,7 @@
   margin-bottom: 31px;
   font-family: Titan One;
   font-style: normal;
+  // @include font-mobile($fs: 34px, $fw: 400, $lh: 39px);
   font-weight: normal;
   font-size: 34px;
   line-height: 39px;
@@ -80,7 +85,7 @@
   &:first-child {
     margin-right: 20px;
   }
-  
+
   @media screen and (min-width: 768px) {
     display: flex;
     // justify-content: center;
@@ -92,16 +97,13 @@
 }
 
 .products-list {
-
   @media screen and (min-width: 768px) {
-    
     &:not(:last-child) {
       margin-right: 20px;
     }
   }
 
   @media screen and (min-width: 1280px) {
-    
     &:not(:last-child) {
       margin-right: 24px;
     }
@@ -121,9 +123,8 @@
 
   border-radius: 24px;
 
-  @media screen and (min-width: 768px) and (max-width: 1279px){
-
-  // @media screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) and (max-width: 1279px) {
+    // @media screen and (min-width: 768px) {
     margin-top: 111px;
     padding-top: 123px;
     padding-left: 11px;
@@ -141,7 +142,6 @@
     max-width: 329px;
     max-height: 525px;
   }
-
 
   &::before {
     content: '';
@@ -192,10 +192,6 @@
   }
 }
 
-
-
-
-
 // <-------------анимация на морожки---------<
 
 .cream {
@@ -205,17 +201,17 @@
     content: '';
 
     @media screen and (max-width: 767px) {
-    background-image: url('../images/2-products/320-icecream.png');
+      background-image: url('../images/2-products/320-icecream.png');
 
       @media screen and (min-device-pixel-ratio: 2) and (max-width: 767px),
-      screen and (min-resolution: 192dpi) and (max-width: 767px),
-      screen and (min-resolution: 2dppx) and (max-width: 767px) {
-      background-image: url('../images/2-products/320-icecream@2x.png');
+        screen and (min-resolution: 192dpi) and (max-width: 767px),
+        screen and (min-resolution: 2dppx) and (max-width: 767px) {
+        background-image: url('../images/2-products/320-icecream@2x.png');
       }
       @media screen and (min-device-pixel-ratio: 3) and (max-width: 767px),
-      screen and (min-resolution: 288dpi) and (max-width: 767px),
-      screen and (min-resolution: 3dppx) and (max-width: 767px) {
-      background-image: url('../images/2-products/320-icecream@3x.png');
+        screen and (min-resolution: 288dpi) and (max-width: 767px),
+        screen and (min-resolution: 3dppx) and (max-width: 767px) {
+        background-image: url('../images/2-products/320-icecream@3x.png');
       }
     }
 
@@ -223,34 +219,32 @@
       background-image: url('../images/2-products/768-icecream.png');
 
       @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
-      screen and (min-resolution: 192dpi) and (min-width: 768px),
-      screen and (min-resolution: 2dppx) and (min-width: 768px) {
-      background-image: url('../images/2-products/768-icecream@2x.png');
+        screen and (min-resolution: 192dpi) and (min-width: 768px),
+        screen and (min-resolution: 2dppx) and (min-width: 768px) {
+        background-image: url('../images/2-products/768-icecream@2x.png');
       }
       @media screen and (min-device-pixel-ratio: 3) and (min-width: 768px),
-      screen and (min-resolution: 288dpi) and (min-width: 768px),
-      screen and (min-resolution: 3dppx) and (min-width: 768px) {
-      background-image: url('../images/2-products/768-icecream@3x.png');
+        screen and (min-resolution: 288dpi) and (min-width: 768px),
+        screen and (min-resolution: 3dppx) and (min-width: 768px) {
+        background-image: url('../images/2-products/768-icecream@3x.png');
       }
     }
-  
 
     @media screen and (min-width: 1280px) {
       background-image: url('../images/2-products/1200-icecream.png');
 
       @media screen and (min-device-pixel-ratio: 2) and (min-width: 1280px),
-      screen and (min-resolution: 192dpi) and (min-width: 1280px),
-      screen and (min-resolution: 2dppx) and (min-width: 1280px) {
-      background-image: url('../images/2-products/1200-icecream@2x.png');
+        screen and (min-resolution: 192dpi) and (min-width: 1280px),
+        screen and (min-resolution: 2dppx) and (min-width: 1280px) {
+        background-image: url('../images/2-products/1200-icecream@2x.png');
       }
       @media screen and (min-device-pixel-ratio: 3) and (min-width: 1280px),
-      screen and (min-resolution: 288dpi) and (min-width: 1280px),
-      screen and (min-resolution: 3dppx) and (min-width: 1280px) {
-      background-image: url('../images/2-products/1200-icecream@3x.png');
+        screen and (min-resolution: 288dpi) and (min-width: 1280px),
+        screen and (min-resolution: 3dppx) and (min-width: 1280px) {
+        background-image: url('../images/2-products/1200-icecream@3x.png');
       }
     }
   }
-
 }
 
 .coffee {
@@ -258,17 +252,17 @@
   &::before {
     content: '';
     @media screen and (max-width: 767px) {
-    background-image: url('../images/2-products/320-ice-coffee.png');
+      background-image: url('../images/2-products/320-ice-coffee.png');
 
       @media screen and (min-device-pixel-ratio: 2) and (max-width: 767px),
-      screen and (min-resolution: 192dpi) and (max-width: 767px),
-      screen and (min-resolution: 2dppx) and (max-width: 767px) {
-      background-image: url('../images/2-products/320-ice-coffee@2x.png');
+        screen and (min-resolution: 192dpi) and (max-width: 767px),
+        screen and (min-resolution: 2dppx) and (max-width: 767px) {
+        background-image: url('../images/2-products/320-ice-coffee@2x.png');
       }
       @media screen and (min-device-pixel-ratio: 3) and (max-width: 767px),
-      screen and (min-resolution: 288dpi) and (max-width: 767px),
-      screen and (min-resolution: 3dppx) and (max-width: 767px) {
-      background-image: url('../images/2-products/320-ice-coffee@3x.png');
+        screen and (min-resolution: 288dpi) and (max-width: 767px),
+        screen and (min-resolution: 3dppx) and (max-width: 767px) {
+        background-image: url('../images/2-products/320-ice-coffee@3x.png');
       }
     }
 
@@ -276,14 +270,14 @@
       background-image: url('../images/2-products/768-ice-coffee.png');
 
       @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
-      screen and (min-resolution: 192dpi) and (min-width: 768px),
-      screen and (min-resolution: 2dppx) and (min-width: 768px) {
-      background-image: url('../images/2-products/768-ice-coffee@2x.png');
+        screen and (min-resolution: 192dpi) and (min-width: 768px),
+        screen and (min-resolution: 2dppx) and (min-width: 768px) {
+        background-image: url('../images/2-products/768-ice-coffee@2x.png');
       }
       @media screen and (min-device-pixel-ratio: 3) and (min-width: 768px),
-      screen and (min-resolution: 288dpi) and (min-width: 768px),
-      screen and (min-resolution: 3dppx) and (min-width: 768px) {
-      background-image: url('../images/2-products/768-ice-coffee@3x.png');
+        screen and (min-resolution: 288dpi) and (min-width: 768px),
+        screen and (min-resolution: 3dppx) and (min-width: 768px) {
+        background-image: url('../images/2-products/768-ice-coffee@3x.png');
       }
     }
 
@@ -291,14 +285,14 @@
       background-image: url('../images/2-products/1200-ice-coffee.png');
 
       @media screen and (min-device-pixel-ratio: 2) and (min-width: 1280px),
-      screen and (min-resolution: 192dpi) and (min-width: 1280px),
-      screen and (min-resolution: 2dppx) and (min-width: 1280px) {
-      background-image: url('../images/2-products/1200-ice-coffee@2x.png');
+        screen and (min-resolution: 192dpi) and (min-width: 1280px),
+        screen and (min-resolution: 2dppx) and (min-width: 1280px) {
+        background-image: url('../images/2-products/1200-ice-coffee@2x.png');
       }
       @media screen and (min-device-pixel-ratio: 3) and (min-width: 1280px),
-      screen and (min-resolution: 288dpi) and (min-width: 1280px),
-      screen and (min-resolution: 3dppx) and (min-width: 1280px) {
-      background-image: url('../images/2-products/1200-ice-coffee@3x.png');
+        screen and (min-resolution: 288dpi) and (min-width: 1280px),
+        screen and (min-resolution: 3dppx) and (min-width: 1280px) {
+        background-image: url('../images/2-products/1200-ice-coffee@3x.png');
       }
     }
   }
@@ -309,17 +303,17 @@
   &::before {
     content: '';
     @media screen and (max-width: 767px) {
-    background-image: url('../images/2-products/320-milkshakes.png');
+      background-image: url('../images/2-products/320-milkshakes.png');
 
       @media screen and (min-device-pixel-ratio: 2) and (max-width: 767px),
-      screen and (min-resolution: 192dpi) and (max-width: 767px),
-      screen and (min-resolution: 2dppx) and (max-width: 767px) {
-      background-image: url('../images/2-products/320-milkshakes@2x.png');
+        screen and (min-resolution: 192dpi) and (max-width: 767px),
+        screen and (min-resolution: 2dppx) and (max-width: 767px) {
+        background-image: url('../images/2-products/320-milkshakes@2x.png');
       }
       @media screen and (min-device-pixel-ratio: 3) and (max-width: 767px),
-      screen and (min-resolution: 288dpi) and (max-width: 767px),
-      screen and (min-resolution: 3dppx) and (max-width: 767px) {
-      background-image: url('../images/2-products/320-milkshakes@3x.png');
+        screen and (min-resolution: 288dpi) and (max-width: 767px),
+        screen and (min-resolution: 3dppx) and (max-width: 767px) {
+        background-image: url('../images/2-products/320-milkshakes@3x.png');
       }
     }
 
@@ -327,14 +321,14 @@
       background-image: url('../images/2-products/768-milkshakes.png');
 
       @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
-      screen and (min-resolution: 192dpi) and (min-width: 768px),
-      screen and (min-resolution: 2dppx) and (min-width: 768px) {
-      background-image: url('../images/2-products/768-milkshakes@2x.png');
+        screen and (min-resolution: 192dpi) and (min-width: 768px),
+        screen and (min-resolution: 2dppx) and (min-width: 768px) {
+        background-image: url('../images/2-products/768-milkshakes@2x.png');
       }
       @media screen and (min-device-pixel-ratio: 3) and (min-width: 768px),
-      screen and (min-resolution: 288dpi) and (min-width: 768px),
-      screen and (min-resolution: 3dppx) and (min-width: 768px) {
-      background-image: url('../images/2-products/768-milkshakes@3x.png');
+        screen and (min-resolution: 288dpi) and (min-width: 768px),
+        screen and (min-resolution: 3dppx) and (min-width: 768px) {
+        background-image: url('../images/2-products/768-milkshakes@3x.png');
       }
     }
 
@@ -342,14 +336,14 @@
       background-image: url('../images/2-products/1200-milkshakes.png');
 
       @media screen and (min-device-pixel-ratio: 2) and (min-width: 1280px),
-      screen and (min-resolution: 192dpi) and (min-width: 1280px),
-      screen and (min-resolution: 2dppx) and (min-width: 1280px) {
-      background-image: url('../images/2-products/1200-milkshakes@2x.png');
+        screen and (min-resolution: 192dpi) and (min-width: 1280px),
+        screen and (min-resolution: 2dppx) and (min-width: 1280px) {
+        background-image: url('../images/2-products/1200-milkshakes@2x.png');
       }
       @media screen and (min-device-pixel-ratio: 3) and (min-width: 1280px),
-      screen and (min-resolution: 288dpi) and (min-width: 1280px),
-      screen and (min-resolution: 3dppx) and (min-width: 1280px) {
-      background-image: url('../images/2-products/1200-milkshakes@3x.png');
+        screen and (min-resolution: 288dpi) and (min-width: 1280px),
+        screen and (min-resolution: 3dppx) and (min-width: 1280px) {
+        background-image: url('../images/2-products/1200-milkshakes@3x.png');
       }
     }
   }
@@ -382,7 +376,6 @@
   @media screen and (min-width: 1280px) {
     margin-top: 38px;
   }
-
 
   &::after {
     content: '';
@@ -442,49 +435,66 @@
   border: none;
   background-color: transparent;
 
-  background-image: url("../images/2-products/arrow-scroll.svg");
+  background-image: url('../images/2-products/arrow-scroll.svg');
   background-size: 30px;
-  background-repeat:no-repeat;
+  background-repeat: no-repeat;
   background-position: center;
   transform: rotate(-90deg);
 
   cursor: pointer;
 }
 
-
-
 // ============подробное описание продукта
 
-.del { 
-  display: none; 
+.del,
+.del2,
+.del3 {
+  display: none;
 }
 
-.del:not(:checked) + label + * { 
-  display: none; 
-  
+.del:not(:checked) + label + *,
+.del2:not(:checked) + label + *,
+.del3:not(:checked) + label + * {
+  display: none;
 }
- 
+
 .del:not(:checked) + label,
-.del:checked + label {
-display: flex;
-align-items: center;
-justify-content: center;
+.del2:not(:checked) + label,
+.del3:not(:checked) + label,
+.del:checked + label,
+.del2:checked + label,
+.del3:checked + label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-border: none;
-width: 40px;
-height: 40px;
+  border: none;
+  width: 40px;
+  height: 40px;
 
-cursor: pointer;
-background-color: var(--white);
-border-radius: 50%;
+  cursor: pointer;
+  background-color: var(--white);
+  border-radius: 50%;
 
-transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .del:checked + label {
-background: var(--mobile-menu-pseudo-color);
+  background: var(--mobile-menu-pseudo-color);
 
-transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.del2:checked + label {
+  background: #c8a320;
+
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.del3:checked + label {
+  background: #3ac820;
+
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .product-list {
@@ -492,7 +502,7 @@ transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
- 
+
   background-color: var(--white);
   border-radius: 4%;
   z-index: 100;
@@ -502,6 +512,15 @@ transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   width: 100%;
   padding: 10px;
   background: var(--backgroundPink);
+  box-shadow: 1px 12px 13px -7px rgba(11, 8, 8, 0.36);
+  -webkit-box-shadow: 1px 12px 13px -7px rgba(11, 8, 8, 0.36);
+  -moz-box-shadow: 1px 12px 13px -7px rgba(11, 8, 8, 0.36);
+}
+.pl2 {
+  background: #f7e19f;
+}
+.pl3 {
+  background: #a1d185;
 }
 
 .product-list h3 {
@@ -510,7 +529,7 @@ transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   font-weight: 400;
   text-align: center;
   color: var(--dark-pink);
-  
+
   margin: 0 0 10px 0;
 }
 
@@ -524,14 +543,12 @@ transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin: auto;
 }
 
-.product-text{
+.product-text {
   margin-top: 10px;
-  color: var(--dark-pink);
+  color: var(--grey);
   font-weight: bold;
-    font-size: 14px;
-    line-height: 152%;
-    text-align: center;
-    letter-spacing: 0.04em;
+  font-size: 14px;
+  line-height: 152%;
+  text-align: center;
+  letter-spacing: 0.04em;
 }
-
-
