--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -19,7 +19,7 @@
                                 </label>
                                 <div class="product-list">
                                     <h3>Ice cream </h3>
-                                    <img class="product-img" src="https://picsum.photos/250/70">
+                                    <img class="product-img" src="https://picsum.photos/250/70" alt="photo ice cream">
                                     <p class="product-text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, placeat ex. Quaerat delectus non quo, ut architecto veniam qui iure repellendus pariatur ullam consequuntur, odit porro aliquid perspiciatis, corrupti aperiam.</p>
                                 </div>
                             </div>
@@ -31,11 +31,17 @@
                             <h3 class="products-content-title">ice coffee</h3>
                             <p class="products-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis. </p>
                             <div class="products-icon">
-                                <button type="button" class="button-products">
+                                <input type="checkbox" id="raz2" class="del2"/>
+                                <label for="raz2" class="button-products del2">
                                     <svg class="products-arrow" width="11px" height="10px">
                                         <use href="./images/sprite.svg#icon-arrow"></use>
                                     </svg>
-                                </button>
+                                </label>
+                                <div class="product-list pl2">
+                                    <h3>Ice coffee </h3>
+                                    <img class="product-img" src="https://picsum.photos/250/70" alt="photo ice cream">
+                                    <p class="product-text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, placeat ex. Quaerat delectus non quo, ut architecto veniam qui iure repellendus pariatur ullam consequuntur, odit porro aliquid perspiciatis, corrupti aperiam.</p>
+                                </div>
                             </div>
                         </div>
                     </li> 
@@ -45,11 +51,17 @@
                             <h3 class="products-content-title">milkshakes</h3>
                             <p class="products-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis. </p>
                             <div class="products-icon">
-                                <button type="button" class="button-products">
+                                <input type="checkbox" id="raz3" class="del3"/>
+                                <label for="raz3" class="button-products del3">
                                     <svg class="products-arrow" width="11px" height="10px">
                                         <use href="./images/sprite.svg#icon-arrow"></use>
                                     </svg>
-                                </button>
+                                </label>
+                                <div class="product-list pl3">
+                                    <h3>Milkshakes </h3>
+                                    <img class="product-img" src="https://picsum.photos/250/70" alt="photo ice cream">
+                                    <p class="product-text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, placeat ex. Quaerat delectus non quo, ut architecto veniam qui iure repellendus pariatur ullam consequuntur, odit porro aliquid perspiciatis, corrupti aperiam.</p>
+                                </div>
                             </div>
                         </div>
                     </li>     
