--- a/src/sass/_modal-locate.scss
+++ b/src/sass/_modal-locate.scss
@@ -1,34 +1,4 @@
-.about-button {
-    font-size: 14px;
-    font-weight: 700;
-    line-height: 1.28;
-    color: #d41443;
-    background-color: #ffffff;
-    font-family: inherit;
-    margin-top: 17px;
-    text-align: center;
-    align-items: baseline;
-    border: none;
-    border-radius: 22px;
-    min-width: 176px;
-    min-height: 44px;
-    outline: none;
-    cursor: pointer;
-    overflow: hidden;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-    & :hover,
-    & :focus {
-        cursor: pointer;
-        background-color: #ecebeb;
-    }
-}
-
-.about-arrow {
-    margin-left: 12px;
-}
-
-.about-backdrop {
+.locate-backdrop {
     position: fixed;
     top: 0;
     left: 0;
@@ -42,13 +12,13 @@
         visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.about-backdrop.is-hidden {
+.locate-backdrop.is-hidden {
     opacity: 0;
     pointer-events: none;
     visibility: hidden;
 }
 
-.about-modal {
+.locate-modal {
     position: absolute;
     left: 50%;
     top: 50%;
@@ -67,11 +37,11 @@
     vertical-align: middle;
 }
 
-.about-backdrop.is-hidden .about-modal {
+.locate-backdrop.is-hidden .locate-modal {
     transform: translate(-50%, -50%) scale(0.5) rotate(-360deg);
 }
 
-.about-close {
+.locate-close {
     position: absolute;
     top: 15px;
     right: 15px;
@@ -85,8 +55,8 @@
         color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.about-close:hover,
-.about-close:focus {
+.locate-close:hover,
+.locate-close:focus {
     background: #c7133e;
 }
 
@@ -98,8 +68,8 @@
     transform: translate(-50%, -50%);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    .about-close:hover &,
-    .about-close:focus & {
+    .locate-close:hover &,
+    .locate-close:focus & {
         fill: #ffffff;
     }
 }
@@ -109,17 +79,25 @@
     fill: #ffffff;
 }
 
-.about-form {
-    display: flex;
-    flex-direction: column;
+.locate-wrapper {
+    display: block;
+    text-align: center;
 }
 
-.about-modal-title {
-    font-size: 14px;
+.local-description {
+    font-family: inherit;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.58;
+    color: #000000;
+}
+
+.locate-title {
+    font-size: 22px;
     font-weight: 700;
     line-height: 1.5;
     letter-spacing: 0.03em;
-    display: inline-block;
     margin-bottom: 10px;
     text-align: center;
     text-transform: uppercase;
