--- a/src/partials/customer_reviews.html
+++ b/src/partials/customer_reviews.html
@@ -1,7 +1,7 @@
 <section class="customer-reviews">
     <div class="container">
         <h2 class="customer-reviews__heading">Customer-reviews</h2>
-        <ul class="customer-reviews__wrappers">
+        <ul class="customer-reviews__wrappers single-item">
             <li class="customer-reviews__wrapper">
                 <picture class="customer-reviews__photo">
                     <source srcset="
@@ -131,6 +131,6 @@
                     </svg>
                 </div>
             </li>
-    </div>
+        </ul>
     </div>
 </section>
