--- a/src/sass/layout/_customer_reviews.scss
+++ b/src/sass/layout/_customer_reviews.scss
@@ -1,5 +1,9 @@
   
 .customer-reviews__photo {
+   display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   margin-bottom: 30px;
 }
 
@@ -46,26 +50,73 @@ padding-bottom: 86px;
 }
 
 .customer-reviews__text-about {
-  font-size: 14px;
-  line-height: 2.58;
+font-size: 14px;
+line-height: 2.58;
+margin: 30px;
 }
 
-
 .customer-reviews__heading {
-  display: none;
+display: none;
 }
 
 .customer-reviews__scroll-dots {
-  margin-top: 30px;
-  margin-bottom: 18px;
-  fill: var(--hover-dark-bg-btn);
+margin-top: 30px;
+margin-bottom: 18px;
+fill: var(--hover-dark-bg-btn);
+display: none;
+
 }
 
 .page-dot__home {
-  fill: #d31342;
+fill: #d31342;
+display: none;
 }
 
 .customers-review__page-dots {
-  fill: #d9d9d9;
-  margin-top: 30px;
+fill: #d9d9d9;
+margin-top: 30px;
+display: none;
+}
+
+.slick-dots{
+display: flex;
+flex-direction: row;
+align-items: center;
+justify-content: center;
+margin: auto;
+}
+.slick-active{
+width: 12px;
+height: 12px;
+border-radius: 50px;
+background-color: #d31342;
+}
+#slick-slide-control00{
+width: 12px;
+height: 12px;
+border-radius: 50px;
+color: transparent;
+background-color: #a8a8a82f;
+}
+#slick-slide-control01{
+width: 12px;
+height: 12px;
+border-radius: 50px;
+color:transparent;
+background-color: #a8a8a82f;
+}
+#slick-slide-control02{
+width: 12px;
+height: 12px;
+border-radius: 50px;
+color:transparent;
+background-color: #a8a8a82f;
+}
+
+#slick-slide00, #slick-slide01, #slick-slide02{
+display: none;
+}
+
+.customer-reviews__wrapper:focus{
+outline: none;
 }
