Поправляет стили линий в мобильном меню

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -221,6 +221,7 @@ header{
         font-size: 14px;
         line-height: 1.286;
         color: var(--white);
+        display: inline;
     
         padding-top: 12px;
         padding-bottom: 12px;
@@ -235,8 +236,13 @@ header{
     }
     
     .menu-list-item {
+        width: 100%;
         padding-left: 21px;
         border-top: 1px solid var(--mobile-menu-pseudo-color);
+
+        &:last-child {
+            border-bottom: 1px solid var(--mobile-menu-pseudo-color);
+        }
     }
     
     .menu-close-btn {
