фіксація розмірів зображень

--- a/src/partials/hero_header.html
+++ b/src/partials/hero_header.html
@@ -18,7 +18,6 @@
                   <a class="nav accent link" href="#home">Home</a>
                 </li>
                 <li class="navigation-list-item">
-                  <!-- <a class="nav link" href="#gallery">About us</a> -->
                   <a class="nav link" href="#about_us">About us</a>
                 </li>
                 <li class="navigation-list-item">
@@ -69,43 +68,45 @@
             </ul>
           </div>
 
-          <div class="notitia-block">
-            <picture>
-              <source
-                srcset="
-                  ./images/hero-header/desktop-milk.webp    1x,
-                  ./images/hero-header/desktop-milk@2x.webp 2x
-                "
-                media="(min-width: 1280px)"
-                type="image/webp"
-              />
-              <source
-                srcset="
-                  ./images/hero-header/desktop-milk.png    1x,
-                  ./images/hero-header/desktop-milk@2x.png 2x
-                "
-                media="(min-width: 1280px)"
-              />
-              <source
-                srcset="
-                  ./images/hero-header/tablet-milk.webp    1x,
-                  ./images/hero-header/tablet-milk@2x.webp 2x
-                "
-                media="(min-width: 768px)"
-                type="image/webp"
-              />
-              <source
-                srcset="
-                  ./images/hero-header/tablet-milk.png    1x,
-                  ./images/hero-header/tablet-milk@2x.png 2x
-                "
-                media="(min-width: 768px)"
-              />
-              <img
-                src="./images/hero-header/tablet-milk.png"
-                alt="графин с молоком"
-              />
-            </picture>
+          <div class="notitia-case">
+            <div class="notitia-block owner">
+              <picture class="slave">
+                <source
+                  srcset="
+                    ./images/hero-header/desktop-milk.webp    1x,
+                    ./images/hero-header/desktop-milk@2x.webp 2x
+                  "
+                  media="(min-width: 1280px)"
+                  type="image/webp"
+                />
+                <source
+                  srcset="
+                    ./images/hero-header/desktop-milk.png    1x,
+                    ./images/hero-header/desktop-milk@2x.png 2x
+                  "
+                  media="(min-width: 1280px)"
+                />
+                <source
+                  srcset="
+                    ./images/hero-header/tablet-milk.webp    1x,
+                    ./images/hero-header/tablet-milk@2x.webp 2x
+                  "
+                  media="(min-width: 768px)"
+                  type="image/webp"
+                />
+                <source
+                  srcset="
+                    ./images/hero-header/tablet-milk.png    1x,
+                    ./images/hero-header/tablet-milk@2x.png 2x
+                  "
+                  media="(min-width: 768px)"
+                />
+                <img
+                  src="./images/hero-header/tablet-milk.png"
+                  alt="графин с молоком"
+                />
+              </picture>
+            </div>
 
             <div class="title-case">
               <p class="title-notitia">
@@ -125,8 +126,8 @@
       <div class="center-case">
         <div class="hero-content"></div>
 
-        <div class="hero-case">
-          <picture>
+        <div class="hero-case owner">
+          <picture class="slave">
             <source
               srcset="
                 ./images/hero-header/desktop-ice-cream.webp    1x,
@@ -198,8 +199,8 @@
             </ul>
           </div>
 
-          <div class="soooooo-image">
-            <picture>
+          <div class="soooooo-image owner">
+            <picture class="slave">
               <source
                 srcset="
                   ./images/hero-header/desktop-girl.webp    1x,
@@ -257,7 +258,6 @@
     <button type="button" class="mobil-button-close" data-menu-close>
       <svg class="mobil-button-icon" width="14" height="14">
         <use href="./images/sprite.svg#close"></use>
-        <!-- <use href=""></use> -->
       </svg>
     </button>
 
@@ -276,7 +276,6 @@
         <a class="mobil-link accent link" id-Exit1 href="#home">Home</a>
       </li>
       <li class="mobil-item">
-        <!-- <a class="mobil-link link" id-Exit2 href="#gallery">About us</a> -->
         <a class="mobil-link link" id-Exit2 href="#about_us">About us</a>
       </li>
       <li class="mobil-item">
@@ -293,8 +292,3 @@
     </ul>
   </div>
 </div>
-
-<!-- <script
-  type="text/javascript"
-  src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"
-></script> -->
