--- a/src/sass/layout/_hero_header.scss
+++ b/src/sass/layout/_hero_header.scss
@@ -50,7 +50,7 @@
 
 .navigation-case,
 .Buy-now-button,
-.notitia-block,
+.notitia-case,
 .soooooo-tasty {
   display: none;
 }
@@ -138,7 +138,7 @@
   margin: 0 auto;
 }
 
-.notitia-block {
+.notitia-case {
   margin-top: 16px;
 
   @media screen and (min-width: 768px) {
@@ -590,7 +590,7 @@
   display: block;
 }
 
-.hero-case {
+.center-case {
   // display: none;
 
   z-index: 1;
@@ -700,4 +700,21 @@
     font-size: 46px;
     line-height: 1.152;
   }
+}
+
+// контейнер зображення
+.owner {
+  // margin: 0 0 20px 0;
+  // padding: 0 0 58% 0;
+  overflow: hidden;
+  position: relative;
+}
+// зображення
+.slave {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  // position: absolute;
+  top: 0;
+  left: 0;
 }
