--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -39,7 +39,7 @@
           <use href="./images/sprite.svg#icon-burger"></use>
         </svg>
       </button>
-      <button class="buy" type="button" data-modal-open>
+      <button class="buy" type="button" menubuy-modal-open>
         Buy now
         <svg class="buy-arrow">
           <use href="./images/sprite.svg#icon-arrow-btn"></use>
