--- a/src/partials/modal-buy-now.html
+++ b/src/partials/modal-buy-now.html
@@ -1,6 +1,6 @@
-<div class="backdrop is-hidden" data-modal menubuy-modal>
+<div class="backdrop is-hidden" menubuy-modal data-modal>
   <div class="modal">
-    <button class="modal-close-btn" type="button" data-modal-close>
+    <button class="modal-close-btn" type="button" menubuy-modal-close>
       <svg class="modal-icon">
         <use href="./images/sprite.svg#icon-cross"></use>
       </svg>
@@ -50,7 +50,7 @@
 
       <label class="modal-form-input-label">
         <span class="modal-form-input-name">Comment</span>
-        <textarea 
+        <textarea
           name="user-message"
           class="modal-form-message"
           placeholder="Enter text"
