--- a/src/partials/modal-header.html
+++ b/src/partials/modal-header.html
@@ -6,7 +6,7 @@
           <use href="./images/sprite.svg#icon-close"></use>
         </svg>
       </button>
-      <button class="buy modal-buy" type="button" menubuy-modal-open>
+      <button class="buy modal-buy" type="button" data-modal-open>
         Buy now >
       </button>
     </div>
