--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,6 +2,7 @@
 @import './utils/variables';
 @import './utils/visualy-hidden';
 @import './utils/mixins';
+@import './utils/hero-modal';
 
 // BASE
 @import './base/fonts';
