--- a/src/sass/layout/_gallery.scss
+++ b/src/sass/layout/_gallery.scss
@@ -4,21 +4,37 @@ li {
   list-style: none;
 }
 
-.gallery {
-  background: linear-gradient(
-    to bottom,
-    var(--bg-color-light) 40%,
-    #ffffff 60%
-  );
+
+.image-bottom .item {
+  max-width: auto;
+
 }
+
+.gallery {
+
+  @media screen and(min-width:320px) {
+    background-image: linear-gradient(var(--bg-color-light) 30%, #ffffff 1px );
+
+  }
+  @media screen and(min-width:768px) {
+    background-image: linear-gradient(var(--bg-color-light) 28%, #ffffff 1px );
+
+  }
+  @media screen and(min-width:1280px) {
+    background-image: linear-gradient(var(--bg-color-light) 32%, #ffffff 1px );
+
+  }
+}
+
+
 
 .gallery-list {
   position: relative;
-  padding: 0 20px;
   z-index: 0;
   display: flex;
   align-items: center;
-  width: 100%;
+
+
 
   justify-content: center;
 
@@ -35,25 +51,25 @@ li {
 
 .item-image {
   @media screen and(min-width:320px) {
-    max-width: 40px;
+    min-width: 40px;
   }
   @media screen and(min-width:768px) {
-    max-width: 84px;
+    min-width: 84px;
   }
   @media screen and(min-width:1280px) {
-    max-width: 140px;
+    min-width: 140px;
   }
 }
 
 .item-image-big {
   @media screen and(min-width:320px) {
-    max-width: 80px;
+    min-width: 80px;
   }
   @media screen and(min-width:768px) {
-    max-width: 172px;
+    min-width: 172px;
   }
   @media screen and(min-width:1280px) {
-    max-width: 284px;
+    min-width: 284px;
   }
 }
 
@@ -66,7 +82,7 @@ li {
 .item-image-big:hover {
   transform: scale(1.5);
   z-index: 1000;
-  border-radius: 25%;
+  border-radius: 15%;
   box-shadow: 0px 0px 10px 10px rgba(225, 121, 146, 0.5);
   transition-property: all;
   transition-duration: 250ms;
@@ -81,7 +97,7 @@ li {
     margin-bottom: 34px;
   }
   @media screen and(min-width:1280px) {
-    margin-bottom: 54px;
+    margin-bottom: 34px;
   }
 }
 
