--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -3,7 +3,10 @@
 .contacts-section {
   background-color: var(--bg-color-light);
   padding-bottom: 113px;
-  background-image: linear-gradient( var(--text-color-dark-bg) 84px, var(--bg-color-light) 84px );
+  background-image: linear-gradient(
+    var(--text-color-dark-bg) 84px,
+    var(--bg-color-light) 84px
+  );
 }
 
 .contacts-list {
@@ -209,37 +212,37 @@
 
 /*TABLET and DESKTOP VERSION*/
 
-
-@media screen and ( min-width: 1280px) {
+@media screen and (min-width: 1280px) {
   .contacts-section {
     padding-bottom: 113px;
-    background-image: linear-gradient( var(--bg-color-light), var(--bg-color-light));
+    background-image: linear-gradient(
+      var(--bg-color-light),
+      var(--bg-color-light)
+    );
   }
 }
 
 .contacts-section {
-  @media screen and ( min-width: 768px) {
+  @media screen and (min-width: 768px) {
     padding-bottom: 158px;
   }
 }
 
 .contacts-section {
-  @media screen and ( min-width: 768px) {
+  @media screen and (min-width: 768px) {
     padding-bottom: 165px;
   }
 }
 
-/*contacts-wrapper*/
+/*contacts-wrapper-list*/
 
-.contacts-wrapper {
+.contacts-wrapper-list {
   @media screen and (min-width: 768px) {
     display: flex;
     justify-content: space-between;
-    
   }
   @media screen and (min-width: 1280px) {
     display: flex;
-    
   }
 }
 
@@ -248,13 +251,13 @@
 @media screen and (min-width: 768px) {
   .contacts-list-sections + .contacts-list-sections {
     margin-top: 0px;
- }
+  }
 }
 
 @media screen and (min-width: 1280px) {
   .contacts-list-sections + .contacts-list-sections {
     margin-top: 0px;
- }
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -264,8 +267,7 @@
     padding-bottom: 50px;
     padding-left: 31px;
     margin: 0px;
-
- }
+  }
 }
 
 @media screen and (min-width: 1280px) {
@@ -278,140 +280,139 @@
     padding-right: 44px;
     padding-bottom: 52px;
     padding-left: 43px;
- }
+  }
 }
 
 /*contacts-list-type*/
 
 @media screen and (min-width: 768px) {
   .contacts-list-type {
-  width: 73px;
-  height: 28px;
-  margin-bottom: 30px;
+    width: 73px;
+    height: 28px;
+    margin-bottom: 30px;
 
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.875;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.875;
 
-  text-align: center;
-  letter-spacing: 0.04em;
- }
+    text-align: center;
+    letter-spacing: 0.04em;
+  }
 }
 
 @media screen and (min-width: 768px) {
   .contacts-list-type-foodtruck {
-  width: 138px;
-  height: 28px;
-  margin-bottom: 30px;
+    width: 138px;
+    height: 28px;
+    margin-bottom: 30px;
 
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.875;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.875;
 
-  text-align: center;
-  letter-spacing: 0.04em;
- }
+    text-align: center;
+    letter-spacing: 0.04em;
+  }
 }
 
 @media screen and (min-width: 1280px) {
   .contacts-list-type {
-  width: 73px;
-  height: 28px;
-  margin-bottom: 32px;
- }
+    width: 73px;
+    height: 28px;
+    margin-bottom: 32px;
+  }
 }
 
 @media screen and (min-width: 1280px) {
   .contacts-list-type-foodtruck {
-  width: 138px;
-  height: 28px;
-  margin-bottom: 32px;
- }
+    width: 138px;
+    height: 28px;
+    margin-bottom: 32px;
+  }
 }
 
 /*contacts-list-locations*/
 
 @media screen and (min-width: 768px) {
   .contacts-list-locations {
-  display: inline;
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 1.857;
-  letter-spacing: 0.04em;
-  margin-bottom: 14px;
- }
+    display: inline;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.857;
+    letter-spacing: 0.04em;
+    margin-bottom: 14px;
+  }
 }
 
 @media screen and (min-width: 1280px) {
   .contacts-list-locations {
-  display: inline;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 1.875;
-  letter-spacing: 0.04em;
-
- }
+    display: inline;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.875;
+    letter-spacing: 0.04em;
+  }
 }
 
 /*contacts-list-descriptions*/
 
 @media screen and (min-width: 768px) {
   .contacts-list-descriptions {
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 1.642;
-  letter-spacing: 0em;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.642;
+    letter-spacing: 0em;
 
-  padding-bottom: 30px;
-  margin-top: 14px;
-  margin-bottom: 30px;
+    padding-bottom: 30px;
+    margin-top: 14px;
+    margin-bottom: 30px;
   }
 }
 
 @media screen and (min-width: 1280px) {
   .contacts-list-descriptions {
-  display: block;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 1.812;
-  letter-spacing: 0.03em;
+    display: block;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.812;
+    letter-spacing: 0.03em;
 
-  padding-bottom: 32px;
-  margin-top: 10px;
-  margin-bottom: 32px;
- }
+    padding-bottom: 32px;
+    margin-top: 10px;
+    margin-bottom: 32px;
+  }
 }
 
 /*contacts-list-schedule*/
 
 @media screen and (min-width: 768px) {
   .contacts-list-schedule {
-  display: inline;
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 1.857;
-  letter-spacing: 0em;
+    display: inline;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.857;
+    letter-spacing: 0em;
   }
 }
 
 @media screen and (min-width: 1280px) {
   .contacts-list-schedule {
-  display: block;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 1.875;
-  letter-spacing: 0.04em;
- }
+    display: block;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.875;
+    letter-spacing: 0.04em;
+  }
 }
 
 /*contacts-list-time*/
 
 @media screen and (min-width: 768px) {
   .contacts-list-time {
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 1.857;
-  letter-spacing: 0em;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.857;
+    letter-spacing: 0em;
   }
 
   .margin {
@@ -424,14 +425,13 @@
   }
 }
 
-
 @media screen and (min-width: 1280px) {
   .contacts-list-time {
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 1.857;
-  letter-spacing: 0em;
-}
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.857;
+    letter-spacing: 0em;
+  }
 
   .margin {
     margin-bottom: 15px;
@@ -447,26 +447,25 @@
 
 @media screen and (min-width: 768px) {
   .contacts-item {
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 1.857;
-  letter-spacing: 0em;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.857;
+    letter-spacing: 0em;
   }
 }
 
 @media screen and (min-width: 1280px) {
   .contacts-item {
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 1.83;
-  letter-spacing: 0em;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.83;
+    letter-spacing: 0em;
   }
 }
 
-
 @media screen and (min-width: 1280px) {
   .contacts-item {
-  display: inline;
+    display: inline;
   }
 }
 
@@ -474,17 +473,15 @@
 
 @media screen and (min-width: 768px) {
   .contacts-button-wrapper {
-  padding-top: 81px;
+    padding-top: 81px;
   }
 }
 
 @media screen and (min-width: 1280px) {
   .contacts-button-wrapper {
-  padding-top: 86px;
-  
+    padding-top: 86px;
   }
 }
-
 
 /*buttons*/
 
@@ -496,49 +493,50 @@
 
 @media screen and (min-width: 768px) {
   .contacts-list-btn {
-  width: 191.45px;
-  height: 44px;
+    width: 191.45px;
+    height: 44px;
 
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 1.312;
-  letter-spacing: 0em;
-
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 1.312;
+    letter-spacing: 0em;
   }
 }
 
 @media screen and (min-width: 1280px) {
   .our-locations-btn {
     width: 198px;
- }
+  }
 }
 
 /*contacts-list-buttons*/
 
+.contacts-list-buttons {
+  @media screen and (min-width: 768px) {
+    padding-bottom: 0;
+  }
+}
 
 @media screen and (min-width: 768px) {
   .contacts-list-buttons {
     margin: 0px;
-
   }
 }
 
 @media screen and (min-width: 768px) {
   .contacts-list-buttons-padding {
     padding-left: 15px;
-
   }
 }
 
 @media screen and (min-width: 768px) {
   .franchise-btn {
     width: 174px;
- }
+  }
 }
-
 
 @media screen and (min-width: 1280px) {
   .franchise-btn {
     width: 180px;
- }
+  }
 }
