--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -6,7 +6,7 @@
       <div class="item-box image-top">
         <div class="item">
 
-          <img src="./images/gallery/1x/gallery-1.png" alt="ice-1"  class="item-image"/>
+          <img src="./images/gallery/1x/gallery-1.png" alt="Мятная мороженка"  class="item-image"/>
 
         </div>
       </div>
@@ -15,14 +15,14 @@
       <div class="item-box image-top">
         <div class="item">
 
-          <img src="./images/gallery/1x/gallery-2.png" alt="ice-2"  class="item-image"/>
+          <img src="./images/gallery/1x/gallery-2.png" alt="Мороженка в рожке"  class="item-image"/>
 
         </div>
       </div>
       <div class="item-box image-bottom">
         <div class="item">
 
-          <img src="./images/gallery/1x/gallery-3.png" alt="ice-3"  class="item-image"/>
+          <img src="./images/gallery/1x/gallery-3.png" alt="Мороженка с клубничкой"  class="item-image"/>
 
         </div>
       </div>
@@ -31,14 +31,14 @@
       <div class="item-box image-top">
         <div class="item">
 
-          <img src="./images/gallery/1x/gallery-4.png" alt="ice-4"  class="item-image-big" />
+          <img src="./images/gallery/1x/gallery-4.png" alt="Мнооооого рожков"  class="item-image-big" />
 
         </div>
       </div>
       <div class="item-box image-bottom">
         <div class="item">
 
-          <img src="./images/gallery/1x/gallery-5.png" alt="ice-5"  class="item-image"/>
+          <img src="./images/gallery/1x/gallery-5.png" alt="Девушка с мороженкой"  class="item-image"/>
 
         </div>
       </div>
@@ -47,14 +47,14 @@
       <div class="item-box image-top">
         <div class="item">
 
-          <img src="./images/gallery/1x/gallery-6.png" alt="ice-6"  class="item-image"/>
+          <img src="./images/gallery/1x/gallery-6.png" alt="Мороженка-салатик"  class="item-image"/>
 
         </div>
       </div>
       <div class="item-box image-bottom">
         <div class="item">
 
-          <img src="./images/gallery/1x/gallery-7.png" alt="ice-7"  class="item-image"/>
+          <img src="./images/gallery/1x/gallery-7.png" alt="Красная мороженка"  class="item-image"/>
 
         </div>
       </div>
@@ -63,14 +63,14 @@
       <div class="item-box image-top">
         <div class="item">
 
-          <img src="./images/gallery/1x/gallery-8.png" alt="ice-8"  class="item-image"/>
+          <img src="./images/gallery/1x/gallery-8.png" alt="Собачка кушает мороженку"  class="item-image"/>
 
         </div>
       </div>
       <div class="item-box image-bottom">
         <div class="item">
 
-          <img src="./images/gallery/1x/gallery-9.png" alt="ice-9"  class="item-image"/>
+          <img src="./images/gallery/1x/gallery-9.png" alt="Коктейль-морожнка"  class="item-image"/>
 
         </div>
       </div>
@@ -79,7 +79,7 @@
       <div class="item-box image-top">
         <div class="item">
 
-          <img src="./images/gallery/1x/gallery-10.png" alt="ice-10"  class="item-image"/>
+          <img src="./images/gallery/1x/gallery-10.png" alt="Йогурт, мороженка и пончики"  class="item-image"/>
 
         </div>
       </div>
