Убрал паддинг у Никиты

--- a/src/sass/layout/_customer_reviews.scss
+++ b/src/sass/layout/_customer_reviews.scss
@@ -1,6 +1,5 @@
-  
 .customer-reviews__photo {
-   display: flex;
+  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -8,8 +7,7 @@
 }
 
 .customer-reviews__wrappers {
-padding-top: 80px;
-padding-bottom: 86px;
+  padding-bottom: 86px;
 }
 
 .customer-reviews__wrapper,
@@ -23,11 +21,10 @@ padding-bottom: 86px;
   align-items: center;
   justify-content: center;
   position: relative;
-
 }
 
 .customer-reviews__text-review {
-  background: transparent url('/images/quotes.png') no-repeat ;
+  background: transparent url('/images/quotes.png') no-repeat;
   background-position: 61px 28px;
   font-size: 12px;
   background-color: var(--bg-feedback);
@@ -37,86 +34,85 @@ padding-bottom: 86px;
   padding-bottom: 26px;
   padding-left: 86px;
   padding-right: 77px;
-
 }
 
-.customer-reviews__text-review-lines{
-   
-	display: inline;
-	background-repeat: no-repeat;
-	background-position: center bottom 1px;
-	background-size: 100% 1px;
-	background-image: linear-gradient(to top, #e1e1e1, #e1e1e1);
+.customer-reviews__text-review-lines {
+  display: inline;
+  background-repeat: no-repeat;
+  background-position: center bottom 1px;
+  background-size: 100% 1px;
+  background-image: linear-gradient(to top, #e1e1e1, #e1e1e1);
 }
 
 .customer-reviews__text-about {
-font-size: 14px;
-line-height: 2.58;
-margin: 30px;
+  font-size: 14px;
+  line-height: 2.58;
+  margin: 30px;
 }
 
 .customer-reviews__heading {
-display: none;
+  display: none;
 }
 
 .customer-reviews__scroll-dots {
-margin-top: 30px;
-margin-bottom: 18px;
-fill: var(--hover-dark-bg-btn);
-display: none;
-
+  margin-top: 30px;
+  margin-bottom: 18px;
+  fill: var(--hover-dark-bg-btn);
+  display: none;
 }
 
 .page-dot__home {
-fill: #d31342;
-display: none;
+  fill: #d31342;
+  display: none;
 }
 
 .customers-review__page-dots {
-fill: #d9d9d9;
-margin-top: 30px;
-display: none;
+  fill: #d9d9d9;
+  margin-top: 30px;
+  display: none;
 }
 
-.slick-dots{
-display: flex;
-flex-direction: row;
-align-items: center;
-justify-content: center;
-margin: auto;
+.slick-dots {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
 }
-.slick-active{
-width: 12px;
-height: 12px;
-border-radius: 50px;
-background-color: #d31342;
+.slick-active {
+  width: 12px;
+  height: 12px;
+  border-radius: 50px;
+  background-color: #d31342;
 }
-#slick-slide-control00{
-width: 12px;
-height: 12px;
-border-radius: 50px;
-color: transparent;
-background-color: #a8a8a82f;
+#slick-slide-control00 {
+  width: 12px;
+  height: 12px;
+  border-radius: 50px;
+  color: transparent;
+  background-color: #a8a8a82f;
 }
-#slick-slide-control01{
-width: 12px;
-height: 12px;
-border-radius: 50px;
-color:transparent;
-background-color: #a8a8a82f;
+#slick-slide-control01 {
+  width: 12px;
+  height: 12px;
+  border-radius: 50px;
+  color: transparent;
+  background-color: #a8a8a82f;
 }
-#slick-slide-control02{
-width: 12px;
-height: 12px;
-border-radius: 50px;
-color:transparent;
-background-color: #a8a8a82f;
-}
-
-#slick-slide00, #slick-slide01, #slick-slide02{
-display: none;
+#slick-slide-control02 {
+  width: 12px;
+  height: 12px;
+  border-radius: 50px;
+  color: transparent;
+  background-color: #a8a8a82f;
 }
 
-.customer-reviews__wrapper:focus{
-outline: none;
+#slick-slide00,
+#slick-slide01,
+#slick-slide02 {
+  display: none;
+}
+
+.customer-reviews__wrapper:focus {
+  outline: none;
 }
