--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,91 +1,108 @@
-<section id="gallery" class="gallery">
-<div class="gallery-wrapper">
-
-  <ul class="gallery-list">
-    <li class="gallery-item">
-      <div class="item-box image-top">
-        <div class="item">
-
-          <img src="./images/gallery/1x/gallery-1.png" alt="Мятная мороженка"  class="item-image"/>
-
+<section id="about_us" class="gallery">
+  <div class="gallery-wrapper">
+    <ul class="gallery-list">
+      <li class="gallery-item">
+        <div class="item-box image-top">
+          <div class="item">
+            <img
+              src="./images/gallery/1x/gallery-1.png"
+              alt="Mint ice cream"
+              class="item-image"
+            />
+          </div>
         </div>
-      </div>
-    </li>
-    <li class="gallery-item">
-      <div class="item-box image-top">
-        <div class="item">
-
-          <img src="./images/gallery/1x/gallery-2.png" alt="Мороженка в рожке"  class="item-image"/>
-
+      </li>
+      <li class="gallery-item">
+        <div class="item-box image-top">
+          <div class="item">
+            <img
+              src="./images/gallery/1x/gallery-2.png"
+              alt="Ice cream cone"
+              class="item-image"
+            />
+          </div>
         </div>
-      </div>
-      <div class="item-box image-bottom">
-        <div class="item">
-
-          <img src="./images/gallery/1x/gallery-3.png" alt="Мороженка с клубничкой"  class="item-image"/>
-
+        <div class="item-box image-bottom">
+          <div class="item">
+            <img
+              src="./images/gallery/1x/gallery-3.png"
+              alt="Ice cream with strawberries"
+              class="item-image"
+            />
+          </div>
         </div>
-      </div>
-    </li>
-    <li class="gallery-item gallery-item-big">
-      <div class="item-box image-top">
-        <div class="item">
-
-          <img src="./images/gallery/1x/gallery-4.png" alt="Мнооооого рожков"  class="item-image-big" />
-
+      </li>
+      <li class="gallery-item gallery-item-big">
+        <div class="item-box image-top">
+          <div class="item">
+            <img
+              src="./images/gallery/1x/gallery-4.png"
+              alt="Lots of ice cream cones"
+              class="item-image-big"
+            />
+          </div>
         </div>
-      </div>
-      <div class="item-box image-bottom">
-        <div class="item">
-
-          <img src="./images/gallery/1x/gallery-5.png" alt="Девушка с мороженкой"  class="item-image"/>
-
+        <div class="item-box image-bottom">
+          <div class="item">
+            <img
+              src="./images/gallery/1x/gallery-5.png"
+              alt="Girl with ice cream"
+              class="item-image"
+            />
+          </div>
         </div>
-      </div>
-    </li>
-    <li class="gallery-item">
-      <div class="item-box image-top">
-        <div class="item">
-
-          <img src="./images/gallery/1x/gallery-6.png" alt="Мороженка-салатик"  class="item-image"/>
-
+      </li>
+      <li class="gallery-item">
+        <div class="item-box image-top">
+          <div class="item">
+            <img
+              src="./images/gallery/1x/gallery-6.png"
+              alt="Ice cream salad"
+              class="item-image"
+            />
+          </div>
         </div>
-      </div>
-      <div class="item-box image-bottom">
-        <div class="item">
-
-          <img src="./images/gallery/1x/gallery-7.png" alt="Красная мороженка"  class="item-image"/>
-
+        <div class="item-box image-bottom">
+          <div class="item">
+            <img
+              src="./images/gallery/1x/gallery-7.png"
+              alt="Red ice cream"
+              class="item-image"
+            />
+          </div>
         </div>
-      </div>
-    </li>
-    <li class="gallery-item gallery-item-top">
-      <div class="item-box image-top">
-        <div class="item">
-
-          <img src="./images/gallery/1x/gallery-8.png" alt="Собачка кушает мороженку"  class="item-image"/>
-
+      </li>
+      <li class="gallery-item gallery-item-top">
+        <div class="item-box image-top">
+          <div class="item">
+            <img
+              src="./images/gallery/1x/gallery-8.png"
+              alt="Dog eating ice cream"
+              class="item-image"
+            />
+          </div>
         </div>
-      </div>
-      <div class="item-box image-bottom">
-        <div class="item">
-
-          <img src="./images/gallery/1x/gallery-9.png" alt="Коктейль-морожнка"  class="item-image"/>
-
+        <div class="item-box image-bottom">
+          <div class="item">
+            <img
+              src="./images/gallery/1x/gallery-9.png"
+              alt="Ice cream cocktail"
+              class="item-image"
+            />
+          </div>
         </div>
-      </div>
-    </li>
-    <li class="gallery-item">
-      <div class="item-box image-top">
-        <div class="item">
-
-          <img src="./images/gallery/1x/gallery-10.png" alt="Йогурт, мороженка и пончики"  class="item-image"/>
-
+      </li>
+      <li class="gallery-item">
+        <div class="item-box image-top">
+          <div class="item">
+            <img
+              src="./images/gallery/1x/gallery-10.png"
+              alt="Yogurt, ice cream and donuts"
+              class="item-image"
+            />
+          </div>
         </div>
-      </div>
-    </li>
-  </ul>
-
-</div>
-
+      </li>
+    </ul>
+  </div>
 </section>
