--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -85,7 +85,11 @@
           <use href="./images/sprite.svg#icon-arrow-white-btn"></use>
         </svg>
       </button>
-      <button type="button" class="contacts-button-franchise">
+      <button
+        type="button"
+        class="contacts-button-franchise"
+        franchisa-modal-open
+      >
         Franchise
         <svg class="contacts-red-icon">
           <use href="./images/sprite.svg#icon-arrow-btn"></use>
