--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -21,5 +21,5 @@
 @import './footer';
 @import './modal-buy-now';
 @import './about-modal';
-@import './modal-frandhisa';
+@import './modal-franchisa';
 @import './modal-locate';
