--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -1,8 +1,21 @@
 .hero {
   background-color: var(--hero-bgc);
+
+  & .container {
+    min-height: 502px;
+    position: relative;
+  }
+}
+
+.title-content {
+  position: absolute;
+  top: 193px;
+  z-index: 3;
 }
 
 .hero-title {
+  max-width: 230px;
+  margin-bottom: 19px;
   text-transform: uppercase;
   text-align: left;
   font-family: Titan One;
@@ -35,6 +48,7 @@
 }
 
 .filtr-btn-red {
+  margin-right: 8px;
   color: var(--primary-white-color);
   background-color: var(--accent-color);
 
@@ -63,10 +77,19 @@
 }
 
 .thumb {
+  position: absolute;
+  top: 83px;
   width: 346px;
   height: 344px;
   background: #ffa5ba;
   border-radius: 100%;
+}
+
+.hero-img {
+  position: absolute;
+  top: 9px;
+  left: 81px;
+  z-index: 2;
 }
 
 @media screen and (max-width: 767px) {
@@ -77,7 +100,13 @@
 }
 
 @media screen and (min-width: 768px) {
+  .title-content {
+    top: 102px;
+  }
+
   .hero-title {
+    max-width: 165px;
+    margin-bottom: 20px;
     font-size: 22px;
     line-height: 1.136;
   }
@@ -88,6 +117,9 @@
   }
 
   .hero-text-box {
+    position: absolute;
+    top: 292px;
+    left: 154px;
     display: block;
     max-width: 114px;
   }
@@ -143,5 +175,21 @@
     text-align: right;
 
     color: var(--primary-white-color);
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .hero-title {
+    max-width: 280px;
+
+    margin-bottom: 25px;
+    font-size: 38px;
+    line-height: 1.157;
+  }
+
+  .hero-title-accent {
+    font-size: 58px;
+    line-height: 0.896;
+    /* or 52px */
   }
 }
