adds button styles to the contacts section

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -108,16 +108,19 @@
         <button class="location-button basic-button button" type="button">
           <span>Our Locations</span>
 
-          <svg class="basic-button-arrow location">
-            <use href="./images/icon-sprite.svg#icon-arrow"></use>
+          <svg class="basic-button-arrow-right location">
+            <use href="./images/icon-sprite.svg#icon-arrow-to-right"></use>
           </svg>
         </button>
       </li>
       <li class="location-button-item">
-        <button class="location-button basic-button button" type="button">
+        <button
+          class="location-button basic-button button button-franch"
+          type="button"
+        >
           <span>Franchise</span>
-          <svg class="basic-button-arrow">
-            <use href="./images/icon-sprite.svg#icon-arrow"></use>
+          <svg class="basic-button-arrow-right">
+            <use href="./images/icon-sprite.svg#icon-arrow-to-right"></use>
           </svg>
         </button>
       </li>
