--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -30,6 +30,7 @@ h1 {
   padding: 8px 14px;
 
   border: none;
+  outline: none;
   font-weight: 400;
   font-size: 8px;
   line-height: 1.25;
@@ -37,7 +38,7 @@ h1 {
   margin-top: 19px;
   align-items: center;
   text-align: center;
-  color: #d41443;
+  color: var(--accent-color);
   background-color: #ffffff;
   border-radius: 20px;
 }
