--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -209,10 +209,6 @@
   font-size: 14px;
   line-height: 18px;
   color: var(--accent-color);
-  &-arrow {
-    width: 8px;
-    height: 13px;
-  }
 
   &:hover,
   &:focus {
@@ -220,16 +216,21 @@
     background: var(--accent-color);
   }
 }
-.basic-button-arrow {
-  fill: aqua;
-  margin-left: 15px;
-  transition: fill 250ms linear;
 
+.button-franch {
   &:hover,
   &:focus {
-    fill: var(--primary-light-color);
-    background: var(--accent-color);
+    color: var(--accent-color);
+    background: var(--button-hover-color);
   }
+}
+
+.basic-button-arrow-right {
+  width: 10px;
+  height: 13px;
+  fill: currentColor;
+  margin-left: 15px;
+  transition: fill 250ms linear;
 }
 
 // End buttons
