--- a/src/sass/_modal-franchisa.scss
+++ b/src/sass/_modal-franchisa.scss
@@ -94,16 +94,16 @@
     margin-bottom: 15px;
 }
 
-.big{
-    text-align: inherit;
+.big {
+    text-align: center;
     margin-bottom: 10px;
 }
 
-.franchisa-modal-form-list{
+.franchisa-modal-form-list {
     margin-bottom: 25px;
 }
 
-.franchisa-modal-form-item{
+.franchisa-modal-form-item {
     font-weight: 400;
     font-size: 12px;
     line-height: 1.166;
@@ -252,7 +252,7 @@
         line-height: 1.167;
     }
 
-    .franchisa-modal-form-item{
+    .franchisa-modal-form-item {
         font-size: 14px;
         line-height: 1.166;
     }
