--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -1,12 +1,13 @@
 .products {
   padding-top: 122px;
   padding-bottom: 98px;
+
   @media screen and(min-width:768px) {
-    padding-bottom: 122px;
+    padding-bottom: 115px;
   }
-  @media screen and(min-width:1280px) {
-    padding-bottom: 122px;
-  }
+  // @media screen and(min-width:1280px) {
+  //   padding-bottom: 115px;
+  // }
 }
 
 .products-ice-cream-title {
