ніби все, зараз вибігаю за доцькою в садок

--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -147,6 +147,25 @@
     color: var(--primary-white-color);
   }
 
+  .hero-text {
+    &::before {
+      content: '';
+      width: 124px;
+      height: 126px;
+      background-image: url('../images/img-hero/milk-tablet.png');
+    }
+  }
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+    .hero-text {
+      &::before {
+        background-size: contain;
+        background-image: url('../images/img-hero/milk-tablet@2x.png');
+      }
+    }
+  }
+
   .hero-text-btn {
     position: relative;
     display: block;
@@ -241,6 +260,46 @@
   .hero-text {
     font-size: 14px;
     line-height: 1.42;
+  }
+
+  @media screen and(min-width:1280px) {
+    .hero-text {
+      &::before {
+        content: '';
+        width: 188px;
+        height: 191px;
+        background-image: url('../images/img-hero/milk-desctop.png');
+      }
+    }
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      .hero-text {
+        &::before {
+          background-size: contain;
+          background-image: url('../images/img-hero/milk-desctop@2x.png');
+        }
+      }
+    }
+
+    .hero-text {
+      &::before {
+        content: '';
+        width: 188px;
+        height: 191px;
+        background-image: url('../images/img-hero/milk-desctop.png');
+      }
+    }
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+    }
+    .hero-text {
+      &::before {
+        background-size: contain;
+        background-image: url('../images/img-hero/milk-desctop@2x.png');
+      }
+    }
   }
 
   .marketing-list {
