то что поняли-пофиксили

--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -344,8 +344,8 @@
 .products-ice-cream-icon {
   width: 16px;
   height: 14px;
-  color: var(--main-dark-color);
-  fill: currentColor;
+
+  fill: var(--main-dark-color);
 
   transition: fill var(--transition-duration) var(--timing-function);
 }
