--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,6 +1,6 @@
 .page-header {
   position: absolute;
-  z-index: 10px;
+width: 100%;
   left: 50%;
   transform: translateX(-50%);
   background: transparent;
