корректирует шрифт тайтл при 1280

--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -33,6 +33,22 @@
     font-size: 58px;
     line-height: 1.15;
 }
+  .products-list {
+  display: flex;
+  flex-direction: column;
+
+  &-title {
+    font-family: Titan One;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 1.15;
+    text-align: center;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    color: $text-white-color;
+    margin-bottom: 30px;
+  }
+}
 }
 
 .products-list {
