--- a/src/sass/layout/_hero_header.scss
+++ b/src/sass/layout/_hero_header.scss
@@ -479,7 +479,7 @@
   pointer-events: none;
 }
 
-.background-close.bat-close {
+.bat-close {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
@@ -547,8 +547,8 @@
 .mobil-item {
   transition: var(--transition-duration) var(--timing-function);
   border-top: 1px solid var(--bg-ice-cream);
-  padding-bottom: 11px;
-  padding-top: 13px;
+  // padding-bottom: 11px;
+  // padding-top: 13px;
 
   &:hover .mobil-link:hover,
   &:focus .mobil-link:focus {
@@ -562,6 +562,8 @@
 
 .mobil-link {
   transition: var(--transition-duration) var(--timing-function);
+
+  padding: 15px 0;
 
   font-family: DM Sans;
   font-style: normal;
