--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -30,7 +30,15 @@
             border-radius: 22px;
             color: var(--white);
             background-color: var(--dark-pink);
+            transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+            color 250ms cubic-bezier(0.4, 0, 0.2, 1);
             
+            
+        }
+        .button-product:hover,
+        .button-product:focus {
+          background-color: var(--white);
+          color: var(--dark-pink);
         }
         .button-him{
             color: var(--dark-pink);
