--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -7,6 +7,11 @@
   background-size: contain;
   background-position: center;
    }
+   @media screen and (min-width: 320px) and (max-width: 767px) {
+   .container{
+     padding-top: 336px;
+   }
+  }
 }
 
 
@@ -144,6 +149,12 @@
   font-weight: 500;
   line-height: 1.5;
   color: var(--grey);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus{
+    color: var(--dark-pink);
+  }
 }
 
 .contact-list {
@@ -203,12 +214,14 @@
   font-weight: bold;
   font-size: 16px;
   line-height: 1.312;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  &hover,
-  &fucus {
-    background-color: var(--dark-pink);
-    border: 1px solid var(--dark-pink);
-    color: var(--white);
+  &:hover,
+  &:focus{
+    background-color: var(--accent);
+    border: 1px solid var(--accent);
+    color: var(--dark-pink);
   }
 }
 
@@ -227,9 +240,11 @@
   font-weight: bold;
   font-size: 16px;
   line-height: 1.312;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  &hover,
-  &fucus {
+  &:hover,
+  &:focus {
     background-color: var(--white);
     border: 1px solid var(--white);
     color: var(--dark-pink);
